# m

./: CMakeLists.txt  README.md  main.cpp
lib/mysql/MySQL-Server-8.0/docs/: INFO_BIN  INFO_SRC
lib/mysql/MySQL-Server-8.0/include/: mysql_version.h  mysqld_error.h
lib/mysql/MySQL-Server-8.0/share/bulgarian/: errmsg.sys
lib/mysql/MySQL-Server-8.0/share/czech/: errmsg.sys
lib/mysql/MySQL-Server-8.0/share/danish/: errmsg.sys
lib/mysql/MySQL-Server-8.0/share/dutch/: errmsg.sys
lib/mysql/MySQL-Server-8.0/share/english/: errmsg.sys
lib/mysql/MySQL-Server-8.0/share/estonian/: errmsg.sys
lib/mysql/MySQL-Server-8.0/share/french/: errmsg.sys
lib/mysql/MySQL-Server-8.0/share/german/: errmsg.sys
lib/mysql/MySQL-Server-8.0/share/greek/: errmsg.sys
lib/mysql/MySQL-Server-8.0/share/hungarian/: errmsg.sys
lib/mysql/MySQL-Server-8.0/share/italian/: errmsg.sys
lib/mysql/MySQL-Server-8.0/share/japanese/: errmsg.sys
lib/mysql/MySQL-Server-8.0/share/korean/: errmsg.sys
lib/mysql/MySQL-Server-8.0/share/norwegian/: errmsg.sys
lib/mysql/MySQL-Server-8.0/share/norwegian-ny/: errmsg.sys
lib/mysql/MySQL-Server-8.0/share/polish/: errmsg.sys
lib/mysql/MySQL-Server-8.0/share/portuguese/: errmsg.sys
lib/mysql/MySQL-Server-8.0/share/romanian/: errmsg.sys
lib/mysql/MySQL-Server-8.0/share/russian/: errmsg.sys
lib/mysql/MySQL-Server-8.0/share/serbian/: errmsg.sys
lib/mysql/MySQL-Server-8.0/share/slovak/: errmsg.sys
lib/mysql/MySQL-Server-8.0/share/spanish/: errmsg.sys
lib/mysql/MySQL-Server-8.0/share/swedish/: errmsg.sys
(+1 files in other folders)
